---
source: tests/integration/snapshot_cli_test.rs
expression: output
---
=== agr analyze --help ===
Exit code: 0

--- stdout ---
Analyze a recording file using an AI agent.

The analyzer reads the cast file, extracts meaningful content (removing ANSI
codes and noise), and uses AI to identify key engineering moments. Markers
are added directly to the file using the native asciicast v3 format.

For large files, analysis is parallelized across multiple chunks, with
automatic retry and rate limit handling.

The default agent is configured in ~/.config/agr/config.toml under
[recording].analysis_agent. Use --agent to override for a single run.

EXAMPLES:
    agr analyze session.cast                     [37mAnalyze with default agent[0m
    agr analyze session.cast --agent codex       [37mUse Codex instead[0m
    agr analyze session.cast --workers 4         [37mUse 4 parallel workers[0m
    agr analyze session.cast --no-parallel       [37mSequential mode[0m
    agr analyze session.cast --timeout 180       [37m3 minute timeout per chunk[0m

SUPPORTED AGENTS:
    claude      [37mClaude Code CLI (default)[0m
    codex       [37mOpenAI Codex CLI[0m
    gemini      [37mGoogle Gemini CLI[0m

Usage: agr analyze [OPTIONS] <FILE>

Arguments:
  <FILE>
          Path to the .cast recording file

Options:
  -a, --agent <AGENT>
          Agent to use: claude, codex, gemini

  -w, --workers <WORKERS>
          Number of parallel workers

  -t, --timeout <TIMEOUT>
          Timeout per chunk in seconds

      --no-parallel
          Disable parallel processing

      --curate
          Auto-curate to 8-12 markers without prompting

      --debug
          Save cleaned content to a file and stop before analysis

  -o, --output <FILE>
          Path to save cleaned content

  -h, --help
          Print help (see a summary with '-h')
--- stderr ---
